--- a/WCSTrainer/Pages/Locations/Details.cshtml
+++ b/WCSTrainer/Pages/Locations/Details.cshtml
@@ -5,21 +5,20 @@
    ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<div class="panel">
+   <div class="body">
+      <component type="typeof(Sidebar)" render-mode="WebAssemblyPrerendered" />
+      <div class="properties">
+         <div class="user-form">
+            <p class="title">Employee #@Html.DisplayFor(model => model.Location.Id)</p>
+            <div class="field-container">
+               <div class="text-group">
+                  <p class="title">Name</p>
+                  <p class="info">@Html.DisplayFor(model => model.Location.Name)</p>
+               </div>
+            </div>
+         </div>
+      </div>
+   </div>
+</div>
 
-<div>
-   <h4>Location</h4>
-   <hr />
-   <dl class="row">
-      <dt class="col-sm-2">
-         @Html.DisplayNameFor(model => model.Location.Name)
-      </dt>
-      <dd class="col-sm-10">
-         @Html.DisplayFor(model => model.Location.Name)
-      </dd>
-   </dl>
-</div>
-<div>
-   <a asp-page="./Edit" asp-route-id="@Model.Location.Id">Edit</a> |
-   <a asp-page="./Index">Back to List</a>
-</div>
