--- a/WCSTrainer/Pages/Skills/Details.cshtml
+++ b/WCSTrainer/Pages/Skills/Details.cshtml
@@ -5,26 +5,23 @@
    ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
-
-<div>
-   <h4>Skill</h4>
-   <hr />
-   <dl class="row">
-      <dd class="col-sm-10">
-         @Html.DisplayFor(model => model.Skill.Name)
-      </dd>
-      <dd class="col-sm-10">
-         @Html.DisplayFor(model => model.Skill.Description)
-      </dd>
-      @foreach (var order in Model.Skill.TrainingOrders) {
-         <dd class="col-sm-10">
-            Order #@order.Id
-         </dd>
-      }
-   </dl>
-</div>
-<div>
-   <a asp-page="./Edit" asp-route-id="@Model.Skill.Id">Edit</a> |
-   <a asp-page="./Index">Back to List</a>
+<div class="panel">
+   <div class="body">
+      <component type="typeof(Sidebar)" render-mode="WebAssemblyPrerendered" />
+      <div class="properties">
+         <div class="user-form">
+            <p class="title">Employee #@Html.DisplayFor(model => model.Skill.Id)</p>
+            <div class="field-container">
+               <div class="text-group">
+                  <p class="title">Name</p>
+                  <p class="info">@Html.DisplayFor(model => model.Skill.Name)</p>
+               </div>
+               <div class="text-group">
+                  <p class="title">Description</p>
+                  <p class="info">@Html.DisplayFor(model => model.Skill.Description)</p>
+               </div>
+            </div>
+         </div>
+      </div>
+   </div>
 </div>
