--- a/WCSTrainer/Pages/Skills/Edit.cshtml
+++ b/WCSTrainer/Pages/Skills/Edit.cshtml
@@ -5,32 +5,44 @@
    ViewData["Title"] = "Edit";
 }
 
-<hr />
-<div class="row">
-   <div class="col-md-4">
-      <form method="post">
-         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-         <input type="hidden" asp-for="Skill.Id" />
-         <div class="form-group">
-            <label asp-for="Skill.Name" class="control-label"></label>
-            <input asp-for="Skill.Name" class="form-control" />
-            <span asp-validation-for="Skill.Name" class="text-danger"></span>
+<div class="panel">
+   <div class="body">
+      <component type="typeof(Sidebar)" render-mode="WebAssemblyPrerendered" />
+      <div class="properties">
+         <div class="user-form">
+            <div class="field-container">
+               <form method="post">
+                  <div asp-validation-summary="All" class="text-danger"></div>
+                  <input type="hidden" asp-for="Skill.Id" />
+
+                  <div class="form-group">
+                     <div class="form">
+                        <div class="labels">
+                           <label asp-for="Skill.Name" class="control-label"></label>
+                           <span asp-validation-for="Skill.Name" class="text-danger"></span>
+                        </div>
+                        <input asp-for="Skill.Name" class="form-control" />
+                     </div>
+                  </div>
+                  <div class="form-group">
+                     <div class="form">
+                        <div class="labels">
+                           <label asp-for="Skill.Description" class="control-label"></label>
+                           <span asp-validation-for="Skill.Description" class="text-danger"></span>
+                        </div>
+                        <input asp-for="Skill.Description" class="form-control" />
+                     </div>
+                  </div>
+                  <div class="form-group">
+                     <input type="submit" value="Save" class="btn bg-btn btnGreen" />
+                  </div>
+               </form>
+            </div>
          </div>
-         <div class="form-group">
-            <label asp-for="Skill.Description" class="control-label"></label>
-            <input asp-for="Skill.Description" class="form-control" />
-            <span asp-validation-for="Skill.Description" class="text-danger"></span>
-         </div>
-         <div class="form-group">
-            <input type="submit" value="Save" class="btn btn-primary" />
-         </div>
-      </form>
+      </div>
    </div>
 </div>
 
-<div>
-   <a asp-page="./Index">Back to List</a>
-</div>
 
 @section Scripts {
    @{
