--- a/WCSTrainer/Pages/Accounts/Edit.cshtml
+++ b/WCSTrainer/Pages/Accounts/Edit.cshtml
@@ -11,9 +11,9 @@
 
          <form method="post">
             <div class="form-group">
-               <label asp-for="User.Email"></label>
-               <input asp-for="User.Email" class="form-control" />
-               <span asp-validation-for="User.Email" class="text-danger"></span>
+               <label asp-for="UserAccount.Email"></label>
+               <input asp-for="UserAccount.Email" class="form-control" />
+               <span asp-validation-for="UserAccount.Email" class="text-danger"></span>
             </div>
             <button type="submit" class="btn btn-primary">Save</button>
             <a asp-page="./Index" class="btn btn-secondary">Cancel</a>
