--- a/WCSTrainer/Pages/Accounts/Details.cshtml
+++ b/WCSTrainer/Pages/Accounts/Details.cshtml
@@ -1,10 +1,7 @@
 ﻿@page
-@model WCSTrainer.Pages.Employees.DetailsModel
-
+@model WCSTrainer.Pages.Accounts.DetailsModel
 @{
-   ViewData["Title"] = "Details";
 }
-@using WCSTrainer.Components
 
 <div class="panel">
    <div class="body">
