--- a/WCSTrainer/Pages/TrainerGroups/Index.cshtml
+++ b/WCSTrainer/Pages/TrainerGroups/Index.cshtml
@@ -24,8 +24,8 @@
                         <td>@Html.DisplayFor(modelItem => item.Name)</td>
                         <td>
                            <a asp-page="./Edit" asp-route-id="@item.Id" class="btn nbg-btn btnGreen">Edit</a>
-                           <a asp-page="./Details" asp-route-id="@item.Id" class="btn nbg-btn btnGreen">Details</a>
-                           <a asp-page="./Delete" asp-route-id="@item.Id" class="btn nbg-btn btnGreen">Delete</a>
+                           <a asp-page="./Details" asp-route-id="@item.Id" class="btn nbg-btn btnWhite">View</a>
+                           <a asp-page="./Delete" asp-route-id="@item.Id" class="btn nbg-btn btnRed">Delete</a>
                         </td>
                      </tr>
                   }
