--- a/WCSTrainer/wwwroot/css/site.css
+++ b/WCSTrainer/wwwroot/css/site.css
@@ -290,7 +290,7 @@ nav {
 					.panel .body .properties .user-form .field-container .form-group .selector {
 					}
 
-					.panel .body .properties .user-form .field-container .form-group .btn {
+					.panel .body .properties .user-form .field-container .btn {
 						font-size: 15px;
 						padding: 5px 10px;
 						min-width: fit-content;
@@ -573,7 +573,7 @@ nav {
 
 					.panel .body .properties .order-list2 table tr td, .panel .body .properties .order-list2 table tr th {
 						color: var(--textSub1);
-						border: 1px solid var(--gray4);
+						border: 1px solid var(--gray3);
 						text-align: start;
 						padding: 5px;
 					}
