--- a/WCSTrainer/Pages/Skills/Index.cshtml
+++ b/WCSTrainer/Pages/Skills/Index.cshtml
@@ -52,6 +52,7 @@
                </div>
                <div class="btns">
                   <a asp-page="Create" class="btn btnWhite">Create New Skill</a>
+                  <a asp-page="DetailView" class="btn btnWhite">Detailed View</a>
                </div>
             </div>
          </div>
