--- a/WCSTrainer/Pages/TrainingOrders/Index.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Index.cshtml
@@ -109,7 +109,7 @@
                </div>
                <div class="btns">
                   <a asp-page="Create" class="btn btnWhite">Create Training Order</a>
-                  <a asp-page="AllView" class="btn btnWhite">Planning</a>
+                  <a asp-page="AllView" class="btn btnWhite">Detailed View</a>
                   <a asp-page="Scheduling" class="btn btnWhite">Scheduling</a>
                </div>
             </div>
