--- a/WCSTrainer/Pages/Accounts/Details.cshtml
+++ b/WCSTrainer/Pages/Accounts/Details.cshtml
@@ -8,26 +8,45 @@
       <component type="typeof(Sidebar)" render-mode="WebAssemblyPrerendered" />
       <div class="properties">
          <div class="user-form">
-            <p class="title">Employee #@Html.DisplayFor(model => model.Employee.Id)</p>
-            <div class="field-container">
-               <div class="text-group">
-                  <p class="title">First Name</p>
-                  <p class="info">@Html.DisplayFor(model => model.Employee.FirstName)</p>
+            @if (Model.UserAccount != null) {
+               <p class="title">Employee #@Model.UserAccount.Id</p>
+               <div class="field-container">
+                  <div class="text-group">
+                     <p class="title">Username</p>
+                     <p class="info">@Model.UserAccount.UserName</p>
+                  </div>
+                  <div class="text-group">
+                     <p class="title">Email</p>
+                     <p class="info">@Model.UserAccount.Email</p>
+                  </div>
+                  <div class="text-group">
+                     <p class="title">Phone Number</p>
+                     <p class="info">@Model.UserAccount.PhoneNumber</p>
+                  </div>
+                  @if (Model.Employee != null) {
+                     <p class="title">Employee #@Model.Employee.Id</p>
+                     <div class="field-container">
+                        <div class="text-group">
+                           <p class="title">First Name</p>
+                           <p class="info">@Model.Employee.FirstName</p>
+                        </div>
+                        <div class="text-group">
+                           <p class="title">Last Name</p>
+                           <p class="info">@Model.Employee.LastName</p>
+                        </div>
+                        <div class="text-group">
+                           <p class="title">Status</p>
+                           <p class="info">@Model.Employee.Status</p>
+                        </div>
+                     </div>
+                  }
                </div>
-               <div class="text-group">
-                  <p class="title">Last Name</p>
-                  <p class="info">@Html.DisplayFor(model => model.Employee.LastName)</p>
+               <div class="btn-container">
+                  <a class="btn bg-btn btnGreen" asp-page="./Edit" asp-route-id="@Model.UserAccount.Id">
+                     Edit
+                  </a>
                </div>
-               <div class="text-group">
-                  <p class="title">Status</p>
-                  <p class="info">@Html.DisplayFor(model => model.Employee.Status)</p>
-               </div>
-            </div>
-            <div class="btn-container">
-               <a class="btn bg-btn btnGreen" asp-page="./Edit" asp-route-id="@Model.Employee.Id">
-                  Edit
-               </a>
-            </div>
+            }
          </div>
       </div>
    </div>
