--- a/WCSTrainer/Pages/Skills/Details.cshtml
+++ b/WCSTrainer/Pages/Skills/Details.cshtml
@@ -10,7 +10,7 @@
       <component type="typeof(Sidebar)" render-mode="WebAssemblyPrerendered" />
       <div class="properties">
          <div class="user-form">
-            <p class="title">Employee #@Html.DisplayFor(model => model.Skill.Id)</p>
+            <p class="title">Skill #@Html.DisplayFor(model => model.Skill.Id)</p>
             <div class="field-container">
                <div class="text-group">
                   <p class="title">Name</p>
