--- a/WCSTrainer/Pages/TrainingOrders/Index.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Index.cshtml
@@ -108,9 +108,9 @@
                   </div>
                </div>
                <div class="btns">
-                  <a asp-page="Create" class="btn btnWhite">Create Training Order</a>
-                  <a asp-page="AllView" class="btn btnWhite">Detailed View</a>
-                  <a asp-page="Scheduling" class="btn btnWhite">Scheduling</a>
+                  <a asp-page="Create" class="btn nbg-btn btnMenu">Create Training Order</a>
+                  <a asp-page="AllView" class="btn nbg-btn btnMenu">Detailed View</a>
+                  <a asp-page="Scheduling" class="btn nbg-btn btnMenu">Scheduling</a>
                </div>
             </div>
          </div>
