--- a/WCSTrainer/Pages/Shared/RazorComponents/Sidebar.razor
+++ b/WCSTrainer/Pages/Shared/RazorComponents/Sidebar.razor
@@ -14,9 +14,9 @@
 
          foreach (var link in links) {
             if (Navigation.Uri.Contains(link.Item1)) {
-               <a href="/@link.Item1" class="selected">@link.Item2</a>
+               <a href="/@link.Item1" class="selected btn nbg-btn btnMenu">@link.Item2</a>
             } else {
-               <a href="/@link.Item1">@link.Item2</a>
+               <a href="/@link.Item1" class="btn nbg-btn btnMenu">@link.Item2</a>
             }
          }
       }
