--- a/WCSTrainer/Pages/Skills/Index.cshtml
+++ b/WCSTrainer/Pages/Skills/Index.cshtml
@@ -51,8 +51,8 @@
                   <input placeholder="Search Training Orders" type="search" onchange="update(this)" />
                </div>
                <div class="btns">
-                  <a asp-page="Create" class="btn btnWhite">Create New Skill</a>
-                  <a asp-page="DetailView" class="btn btnWhite">Detailed View</a>
+                  <a asp-page="Create" class="btn nbg-btn btnMenu">Create New Skill</a>
+                  <a asp-page="DetailView" class="btn nbg-btn btnMenu">Detailed View</a>
                </div>
             </div>
          </div>
