--- a/WCSTrainer/Pages/Skills/Index.cshtml
+++ b/WCSTrainer/Pages/Skills/Index.cshtml
@@ -29,7 +29,7 @@
                                  <p>Skill #@item.Id </p>
                               </div>
                               <div class="sub">
-                                 <p class="identifier">Name - @item.Name</p>
+                                 <p class="identifier">@item.Name</p>
                               </div>
                            </div>
                            <div class="btns">
