--- a/WCSTrainer/wwwroot/css/site.css
+++ b/WCSTrainer/wwwroot/css/site.css
@@ -463,6 +463,7 @@ nav {
 							display: flex;
 							flex-direction: column;
 							text-decoration: none;
+							min-height: 55px;
 						}
 
 							.panel .body .properties .list-container .order-list li .info .title {
@@ -471,7 +472,11 @@ nav {
 								height: 100%;
 								color: var(--textMain);
 								font-size: 17px;
+								align-items: flex-start;
+								gap: 10px;
+								padding: 3px 0;
 							}
+								
 
 							.panel .body .properties .list-container .order-list li .info .sub {
 								display: flex;
@@ -491,8 +496,8 @@ nav {
 						}
 
 							.panel .body .properties .list-container .order-list li .btns .btn {
-								padding: 6px 10px;
-								font-size: 15px;
+								padding: 5px 10px;
+								font-size: 14px;
 							}
 
 			.panel .body .properties .order-list2 {
