--- a/WCSTrainer/Pages/Skills/Index.cshtml
+++ b/WCSTrainer/Pages/Skills/Index.cshtml
@@ -33,7 +33,7 @@
                               </div>
                            </div>
                            <div class="btns">
-                              <a class="btn bg-btn btnBlue" asp-page="./Assign" asp-route-id="@item.Id">Assign</a>
+                              <a class="btn bg-btn btnGreen" asp-page="./Assign" asp-route-id="@item.Id">Assign</a>
                               <a class="btn bg-btn btnWhite" asp-page="./Details" asp-route-id="@item.Id">View</a>
                               <a class="btn bg-btn btnRed" asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
                            </div>
