--- a/WCSTrainer/wwwroot/css/colors.css
+++ b/WCSTrainer/wwwroot/css/colors.css
@@ -15,7 +15,7 @@
 	--blue2: #00415e;
 	--green1: #81ff8f;
 	--green2: #0fb021;
-	--yellow1: #fff764;
+	--yellow1: #ffe464;
 	--yellow2: #98780c;
 }
 
