--- a/WCSTrainer/Pages/TrainingOrders/Index.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Index.cshtml
@@ -89,19 +89,19 @@
                   <p class="section-title">Show in List:</p>
                   <div class="section">
                      <input type="checkbox" checked id="Verified" onchange="checkedBox(this)" />
-                     <p class="section-info">Verified</p>
+                     <p class="section-info black-pill verified">Verified</p>
                   </div>
                   <div class="section">
                      <input type="checkbox" checked id="Completed" onchange="checkedBox(this)" />
-                     <p class="section-info">Completed</p>
+                     <p class="section-info black-pill completed">Completed</p>
                   </div>
                   <div class="section">
                      <input type="checkbox" checked id="Active" onchange="checkedBox(this)" />
-                     <p class="section-info">Active</p>
+                     <p class="section-info black-pill active">Active</p>
                   </div>
                   <div class="section">
                      <input type="checkbox" checked id="Awaiting Approval" onchange="checkedBox(this)" />
-                     <p class="section-info">Awaiting Approval</p>
+                     <p class="section-info black-pill awaiting">Awaiting Approval</p>
                   </div>
                </div>
                <div class="btns">
