accounts username instead of email, account manager done

--- a/WCSTrainer/Areas/Identity/Pages/Account/Login.cshtml
+++ b/WCSTrainer/Areas/Identity/Pages/Account/Login.cshtml
@@ -9,9 +9,9 @@
     <form id="account" method="post">
         <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
         <div class="field">
-            <label asp-for="Input.Email" class="label">Email</label>
-            <span asp-validation-for="Input.Email" class="text-danger"></span>
-            <input asp-for="Input.Email" autocomplete="username" aria-required="true" placeholder="name@example.com" />
+         <label asp-for="Input.Username" class="label">Username</label>
+         <span asp-validation-for="Input.Username" class="text-danger"></span>
+         <input asp-for="Input.Username" autocomplete="username" aria-required="true" placeholder="name@example.com" />
         </div>
         <div class="field">
             <label asp-for="Input.Password" class="label">Password</label>
