--- a/WCSTrainer/Areas/Identity/Pages/Account/Register.cshtml
+++ b/WCSTrainer/Areas/Identity/Pages/Account/Register.cshtml
@@ -4,36 +4,36 @@
 }
 
 <div class="login-container">
-    <p class="title">Register</p>
-    <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
-    <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-        <div class="field">
-            <label class="label" asp-for="Input.FirstName">First Name</label>
-            <span asp-validation-for="Input.FirstName" class="text-danger"></span>
-            <input asp-for="Input.FirstName" aria-required="true" placeholder="first name" />
-        </div>
-        <div class="field">
-            <label class="label" asp-for="Input.LastName">Last Name</label>
-            <span asp-validation-for="Input.LastName" class="text-danger"></span>
-            <input asp-for="Input.LastName" aria-required="true" placeholder="last name" />
-        </div>
-        <div class="field">
-            <label class="label" asp-for="Input.Email">Email</label>
-            <span asp-validation-for="Input.Email" class="text-danger"></span>
-            <input asp-for="Input.Email" autocomplete="username" aria-required="true" placeholder="name@example.com" />
-        </div>
-        <div class="field">
-            <label class="label" asp-for="Input.Password">Password</label>
-            <span asp-validation-for="Input.Password" class="text-danger"></span>
-            <input asp-for="Input.Password" autocomplete="new-password" aria-required="true" placeholder="password" />
-        </div>
-        <div class="field">
-            <label class="label" asp-for="Input.ConfirmPassword">Confirm Password</label>
-            <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-            <input asp-for="Input.ConfirmPassword" autocomplete="new-password" aria-required="true" placeholder="confirm password" />
-        </div>
-        <div class="login-btns">
-            <button id="registerSubmit" type="submit" class="btn bg-btn btnWhite">Register</button>
-        </div>
-    </form>
+   <p class="title">Register</p>
+   <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
+   <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
+      <div class="field">
+         <label class="label" asp-for="Input.Username">Username</label>
+         <span asp-validation-for="Input.Username" class="text-danger"></span>
+         <input asp-for="Input.Username" autocomplete="username" aria-required="true" placeholder="Username123" />
+      </div>
+      <div class="field">
+         <label class="label" asp-for="Input.FirstName">First Name</label>
+         <span asp-validation-for="Input.FirstName" class="text-danger"></span>
+         <input asp-for="Input.FirstName" aria-required="true" placeholder="first name" />
+      </div>
+      <div class="field">
+         <label class="label" asp-for="Input.LastName">Last Name</label>
+         <span asp-validation-for="Input.LastName" class="text-danger"></span>
+         <input asp-for="Input.LastName" aria-required="true" placeholder="last name" />
+      </div>
+      <div class="field">
+         <label class="label" asp-for="Input.Password">Password</label>
+         <span asp-validation-for="Input.Password" class="text-danger"></span>
+         <input asp-for="Input.Password" autocomplete="new-password" aria-required="true" placeholder="password" />
+      </div>
+      <div class="field">
+         <label class="label" asp-for="Input.ConfirmPassword">Confirm Password</label>
+         <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+         <input asp-for="Input.ConfirmPassword" autocomplete="new-password" aria-required="true" placeholder="confirm password" />
+      </div>
+      <div class="login-btns">
+         <button id="registerSubmit" type="submit" class="btn bg-btn btnWhite">Register</button>
+      </div>
+   </form>
 </div>
