--- a/WCSTrainer/Pages/Shared/_LoginPartial.cshtml
+++ b/WCSTrainer/Pages/Shared/_LoginPartial.cshtml
@@ -9,7 +9,7 @@
    <a href="/Identity/Account/Manage" class="img-container">
       <img src="~/images/settings.svg" />
    </a>
-   <p class="login-email">@user.Email</p>
+   <p class="login-email">@user.UserName</p>
    <form id="logoutForm" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })">
       <button id="logout" type="submit" class="btn bg-btn btnWhite">Logout</button>
    </form>
