--- a/WCSTrainer/wwwroot/css/site.css
+++ b/WCSTrainer/wwwroot/css/site.css
@@ -79,6 +79,11 @@ nav {
 			align-items: center;
 		}
 
+			nav .nav-container .nav-options .btn {
+				padding: 5px 10px;
+				font-size: 15px;
+			}
+
 			nav .nav-container .nav-options img {
 				height: 20px;
 				filter: invert(50%);
@@ -449,12 +454,10 @@ nav {
 						align-items: center;
 						width: 100%;
 						padding: 8px 0;
-						transition: background-color 0.1s ease-out;
 					}
 
 						.panel .body .properties .list-container .order-list li:hover {
-							background-color: var(--gray3);
-							transition: background-color 0s;
+							
 						}
 
 						.panel .body .properties .list-container .order-list li .info {
